--- a/App/FEKC/app/src/main/res/layout/task_view_row.xml
+++ b/App/FEKC/app/src/main/res/layout/task_view_row.xml
@@ -18,66 +18,66 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:id="@+id/SmallDescrTask">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_keyboard_arrow_down"
+                android:id="@+id/dropdown_icon"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true" />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:id="@+id/SmallDescrTask">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_keyboard_arrow_down"
-                    android:id="@+id/dropdown_icon"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
+                android:layout_toLeftOf="@id/dropdown_icon"
+                android:text="MORE\nINFO"
+                android:textAlignment="center"
+                android:textSize="9sp"
+                android:id="@+id/More_Info"
+                android:layout_centerVertical="true"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/task_type_icon"
+                android:src="@drawable/ic_action_warning"
+                android:tint="#222"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/task_type_icon"
+                android:layout_centerVertical="true"
+                android:id="@+id/TaskDescr1">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/task_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@id/dropdown_icon"
-                    android:text="MORE\nINFO"
-                    android:textAlignment="center"
-                    android:textSize="9sp"
-                    android:id="@+id/More_Info"
-                    android:layout_centerVertical="true"/>
+                    android:text="Task Name"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="#222"
+                    android:layout_alignParentTop="true"/>
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/task_type_icon"
-                    android:src="@drawable/ic_action_warning"
-                    android:tint="#222"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/info"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/task_type_icon"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/TaskDescr1">
-                    <TextView
-                        android:id="@+id/task_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Task Name"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:textColor="#222"
-                        android:layout_alignParentTop="true"/>
-
-                    <TextView
-                        android:id="@+id/info"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:textSize="12sp"
-                        android:text="Task Descr"
-                        android:layout_below="@+id/task_name"/>
-                </RelativeLayout>
-
+                    android:layout_marginLeft="10dp"
+                    android:textSize="12sp"
+                    android:text="Task Descr"
+                    android:layout_below="@+id/task_name"/>
             </RelativeLayout>
+
+        </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/llExpandArea"
@@ -141,6 +141,7 @@
                         android:layout_below="@+id/apps_view"/>
 
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -195,7 +196,7 @@
                     android:layout_height="1dp"
                     android:background="#ccc"
                     android:layout_marginTop="10dp"
-                    android:layout_below="@id/Task_deets"
+                    android:layout_below="@+id/Task_deets"
                     android:id="@+id/Delete_Divider"/>
 
                 <RelativeLayout
@@ -220,6 +221,34 @@
                         android:src="@drawable/ic_delete_forever"
                         android:id="@+id/delete_icon" />
                 </RelativeLayout>
+
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_below="@+id/deleteLayout"
+                        android:layout_toLeftOf="@+id/task_view_row_dummy_text_view"
+                        android:layout_marginRight="2dp"
+                        android:text="Start"
+                        android:id="@+id/task_view_row_start_button" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_below="@+id/deleteLayout"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/task_view_row_dummy_text_view" />
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_below="@+id/deleteLayout"
+                        android:layout_toRightOf="@id/task_view_row_dummy_text_view"
+                        android:text="Stop"
+                        android:id="@+id/task_view_row_stop_button" />
+
 
             </RelativeLayout>
 
